# IN_Projekt_Abgabe

./: README.md  pyproject.toml  requirements.txt
planschSoftware/: db.sqlite3  manage.py
planschSoftware/club/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
planschSoftware/club/fixtures/: data.json  training_data.json
planschSoftware/club/migrations/: 0001_initial.py  0002_task_delete_product.py  0003_alter_swimmer_attest_alter_task_comment_and_more.py  0004_trainingsday_date_alter_swimmgroup_short_name_and_more.py  0005_alter_swimmgroup_trainer_alter_trainingsday_date.py  0006_trainingplan_total_km_alter_swimmgroup_trainer.py  0007_remove_trainingplan_total_km_trainingplan_total_m.py  0008_alter_training_group.py  0009_departmentmanager.py  0010_departmentmanager_email.py  0011_training_training_plan_trainingplan_category_and_more.py  0012_alter_attendance_status.py  0013_remove_training_description.py  0014_alter_training_training_plan.py  0015_alter_attendance_status.py  0016_training_trainer_alter_club_address_and_more.py  0017_trainingplan_group.py  0018_alter_trainer_birth_date.py
planschSoftware/club/static/club/: calendar.css
planschSoftware/club/templates/club/: base.html  base_without_navbar.html  change_password.html  club_detail.html  club_form.html  confirm_delete.html  departmentmanager_form.html  departmentmanager_updateform.html  login.html  logout.html  swimmer_detail.html  swimmer_form.html  (+13 more)
planschSoftware/club/templatetags/: club_tags.py
planschSoftware/planschSoftware/: asgi.py  settings.py  urls.py  wsgi.py
